--- a/src/Component/Details/Details.css
+++ b/src/Component/Details/Details.css
@@ -1,8 +1,16 @@
 .details{
+    width: 50%;
+    height: 100vh;   
+    margin: 100px auto;
+}
+.details-img img{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+}
+@media only screen and (max-width:768px) {
+    .details{
+        width: 80%;
+        height: 100vh;   
+        margin: 50px auto;
+    }
+  
 }
