--- a/src/Component/Shipment/Shipment.css
+++ b/src/Component/Shipment/Shipment.css
@@ -1,4 +1,12 @@
 .shipment{
-    margin-top: 200px;
-    text-align: center;
+    width: 50%;
+    margin: 200px auto; 
+
+}
+.shipment input{
+    width: 100%; 
+    margin-top: 10px;
+}
+.shipment span{
+    color: red;
 }
