--- a/src/Component/LoginPage/Login.css
+++ b/src/Component/LoginPage/Login.css
@@ -13,3 +13,11 @@
     margin-top: 50px;
     text-align: center;
 }
+
+@media screen and (max-width:768px) {
+    .login{ 
+        width: 90%;
+        margin: 100px auto;
+    }
+    
+}
